compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__attribute_erlang.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(erlang, \"one\", \"one_erl\")\npub fn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
---
----- SOURCE CODE

@external(erlang, "one", "one_erl")
pub fn one(x: Int) -> Int {
  todo
}

pub fn main() {
  one(1)
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

export function one(x) {
  throw makeError(
    "todo",
    "my/mod",
    4,
    "one",
    "`todo` expression evaluated. This code has not yet been implemented.",
    {}
  )
}

export function main() {
  return one(1n);
}
