compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__attribute_javascript.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"./one.mjs\", \"oneJs\")\npub fn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
---
----- SOURCE CODE

@external(javascript, "./one.mjs", "oneJs")
pub fn one(x: Int) -> Int {
  todo
}

pub fn main() {
  one(1)
}


----- COMPILED JAVASCRIPT
import { oneJs as one } from "./one.mjs";

export { one };

export function main() {
  return one(1n);
}
